[gd_scene load_steps=3 format=3 uid="uid://ppyuda2s4g5g"]

[ext_resource type="Script" path="res://board/card_on_board.gd" id="2_rxlqq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5q0n3"]
size = Vector2(113, 157)

[node name="CardOnBoard" type="TextureRect"]
offset_right = 200.0
offset_bottom = 200.0
expand_mode = 3
stretch_mode = 4
script = ExtResource("2_rxlqq")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(56.5, 79.5)
shape = SubResource("RectangleShape2D_5q0n3")

[node name="MoutainValueRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 50.0
offset_right = 49.0
offset_bottom = 72.0
color = Color(0.50352, 0.240372, 0.0607779, 1)

[node name="MountainValue" type="Label" parent="MoutainValueRect"]
layout_mode = 0
offset_right = 46.0
offset_bottom = 23.0
text = "Test 1"

[node name="ForestValueRect" type="ColorRect" parent="."]
offset_left = 2.0
offset_top = 2.0
offset_right = 49.0
offset_bottom = 24.0
color = Color(0.178851, 0.379031, 0.142842, 1)

[node name="ForestValue" type="Label" parent="ForestValueRect"]
layout_mode = 0
offset_right = 46.0
offset_bottom = 23.0
text = "Test 1"

[node name="OceanValueRect" type="ColorRect" parent="."]
offset_left = 2.0
offset_top = 100.0
offset_right = 49.0
offset_bottom = 122.0
color = Color(0.233315, 0.279054, 0.63113, 1)

[node name="OceanValue" type="Label" parent="OceanValueRect"]
layout_mode = 0
offset_right = 46.0
offset_bottom = 23.0
text = "Test 1"
